[package]
name = "my-blaster-runs-hot"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
bevy_rapier2d = { version = "0.16", features = ["simd-stable"] }
csv = "1.1"
nalgebra = "0.31.1"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }

[workspace]
resolver = "2"
